--- a/auth/package.json
+++ b/auth/package.json
@@ -16,6 +16,8 @@
     "jwt-simple": "^0.5.6",
     "mongoose": "^5.13.1",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.9"
+    "nodemon": "^2.0.9",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0"
   }
 }
