--- a/Client Side Authentication v14/package.json
+++ b/Client Side Authentication v14/package.json
@@ -28,6 +28,7 @@
     "react-redux": "5.0.7",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "redux": "4.0.0"
+    "redux": "4.0.0",
+    "redux-form": "^8.3.7"
   }
 }
