--- a/Client Side Authentication v14/package.json
+++ b/Client Side Authentication v14/package.json
@@ -23,8 +23,8 @@
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
     "lodash": "^3.10.1",
-    "react": "16.3.2",
-    "react-dom": "16.3.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-redux": "5.0.7",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
